# mocas

./: .gitignore  README.md  pyproject.toml
src/mocas/: cadc_archive_tap_client.py  cli.py  core.py  ephemeris_builder.py  ssois.py  votable_file.py
test/: test_core.py
test/data/: 0123T02.ast  test.ast
